--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -1,11 +1,16 @@
 <%= tag.tr id: dom_id(person) do %>
   <td><%= person.name %></td>
-  <td><%= person.dni %></td>
   <td><%= person.company %></td>
   <td>
-    <%= link_to person_path(person), 
-        class: "btn btn-warning btn-sm btn-sm btn-icon text-white", target: '_blank' ,title: 'Etiqueta' do %>
+    <%= link_to edit_person_path(person), 
+        class: "btn btn-warning btn-sm btn-sm btn-icon text-white", data: { turbo_frame: "modal"}, title: 'Etiqueta' do %>
         <i class="bi bi-pencil-square"></i>
     <% end %>
+
+    <%= link_to person_path(person), 
+        class: "btn btn-info btn-sm btn-sm btn-icon text-white", target: '_blank' ,title: 'Etiqueta' do %>
+        <i class="bi bi-filetype-pdf"></i>
+    <% end %>
+
   </td>
 <% end %>
