--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,10 +1,3 @@
-<h1>Editing person</h1>
-
-<%= render "form", person: @person %>
-
-<br>
-
-<div>
-  <%= link_to "Show this person", @person %> |
-  <%= link_to "Back to people", people_path %>
-</div>
+<%= render 'shared/modal', title: "Editar inscripto", fade_in: true do %>
+  <%= render "form", person: @person %>
+<% end %>
