--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -3,7 +3,7 @@
   <td><%= person.company %></td>
   <td>
     <%= link_to edit_person_path(person), 
-        class: "btn btn-warning btn-sm btn-sm btn-icon text-white", data: { turbo_frame: "modal"}, title: 'Etiqueta' do %>
+        class: "btn btn-warning btn-sm btn-sm btn-icon text-white", data: { turbo_frame: "modal"}, title: 'Editar' do %>
         <i class="bi bi-pencil-square"></i>
     <% end %>
 
